update the p tag using div

--- a/plants.html
+++ b/plants.html
@@ -59,9 +59,10 @@
                 </div>
             </div>
         </div>
-        <p>The plant names break first because the letter div are designed using
+        <div>The plant names break first because the letter div are designed
+            using
             col-sm which gives 576 pixel value so it last same until the screen
             size become 576. where col-md pixel value is 768 it will break when
-            the screen size is lesst than it.</p>
+            the screen size is lesst than it.</div>
     </body>
 </html>
