--- a/plants.html
+++ b/plants.html
@@ -59,10 +59,32 @@
                 </div>
             </div>
         </div>
-        <div>The plant names break first because the letter div are designed
+        <div class="col-md">The plant names break first because the letter div
+            are
+            designed
             using
             col-sm which gives 576 pixel value so it last same until the screen
             size become 576. where col-md pixel value is 768 it will break when
             the screen size is lesst than it.</div>
+        <div class="container">
+            <img src="./images/Achimenes.jpg">
+            <img src="./images/Aechmea.jpg">
+            <img src="./images/Agave.jpg">
+        </div>
+
+        <div class="container">
+            <img class="img-thumbnail" src="./images/Achimenes.jpg">
+            <img class="img-thumbnail" src="./images/Aechmea.jpg">
+            <img class="img-thumbnail" src="./images/Agave.jpg">
+        </div>
+
+
+        <style>
+                img{
+                    width: 300px;
+                    height: 400px;
+                }
+            </style>
     </body>
+
 </html>
