--- a/plants.html
+++ b/plants.html
@@ -77,8 +77,57 @@
             <img class="img-thumbnail" src="./images/Aechmea.jpg">
             <img class="img-thumbnail" src="./images/Agave.jpg">
         </div>
+        <div class="col-md-12">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Letters</th>
+                        <th>Plant</th>
+                        <th>City</th>
+                        <th>Food</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>A</td>
+                        <td>Aechmea</td>
+                        <td>Anakapalli</td>
+                        <td>Avacodo Salad</td>
+                    </tr>
+                    <tr>
+                        <td>D</td>
+                        <td>Dioon</td>
+                        <td>Delhi</td>
+                        <td>Danish</td>
+                    </tr>
+                    <tr>
+                        <td>D</td>
+                        <td>Duranta</td>
+                        <td>Detorarit</td>
+                        <td>Dates</td>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td>Achimenes</td>
+                        <td>Ananthapur</td>
+                        <td>Almond rice</td>
+                    </tr>
+                    <tr>
+                        <td>G</td>
+                        <td>Ginger</td>
+                        <td>Guntur</td>
+                        <td>Goli Puri</td>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td>Agave</td>
+                        <td>Amstradam</td>
+                        <td>Alu Parota</td>
+                    </tr>
+                </tbody>
+            </table>
 
-
+        </div>
         <style>
                 img{
                     width: 300px;
