--- a/plants.html
+++ b/plants.html
@@ -128,6 +128,31 @@
             </table>
 
         </div>
+        <div class="label">
+            <label>Button and button labels</label>
+        </div>
+        <div class="container col-md-12">
+            <button class="btn btn-primary btn-md"> A </button>
+            <button class="btn btn-primary btn-md"> D </button>
+            <button class="btn btn-primary btn-md"> D </button>
+            <button class="btn btn-primary btn-md"> A </button>
+            <button class="btn btn-primary btn-md"> G </button>
+            <button class="btn btn-primary btn-md"> A </button>
+        </div>
+        <div class="btn-toolbar">
+            <div class="btn-group">
+                <button class="btn btn-success btn-md"> A </button>
+                <button class="btn btn-success btn-md"> D </button>
+                <button class="btn btn-success btn-md"> D </button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-info btn-md"> A </button>
+                <button class="btn btn-info btn-md"> G </button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-danger btn-md"> A </button>
+            </div>
+        </div>
         <style>
                 img{
                     width: 300px;
