--- a/plants.html
+++ b/plants.html
@@ -140,17 +140,28 @@
             <button class="btn btn-primary btn-md"> A </button>
         </div>
         <div class="btn-toolbar">
-            <div class="btn-group">
+            <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-success btn-md"> A </button>
                 <button class="btn btn-success btn-md"> D </button>
                 <button class="btn btn-success btn-md"> D </button>
             </div>
-            <div class="btn-group">
+            <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-info btn-md"> A </button>
                 <button class="btn btn-info btn-md"> G </button>
             </div>
-            <div class="btn-group">
+            <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-danger btn-md"> A </button>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button"
+                id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="./cat.html">Cat</a>
+                <a class="dropdown-item" href="./dog.html">Dog</a>
             </div>
         </div>
         <style>
