--- a/plants.html
+++ b/plants.html
@@ -14,7 +14,29 @@
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand" href="plants.html">Happy Plants</a>
 
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="cat.html">Cat page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="dog.html">Dog page</a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
         <div class="container">
             <div class="row">
 
@@ -58,118 +80,223 @@
                     Agave
                 </div>
             </div>
-        </div>
-        <div class="col-md">The plant names break first because the letter div
-            are
-            designed
-            using
-            col-sm which gives 576 pixel value so it last same until the screen
-            size become 576. where col-md pixel value is 768 it will break when
-            the screen size is lesst than it.</div>
-        <div class="container">
-            <img src="./images/Achimenes.jpg">
-            <img src="./images/Aechmea.jpg">
-            <img src="./images/Agave.jpg">
-        </div>
 
-        <div class="container">
-            <img class="img-thumbnail" src="./images/Achimenes.jpg">
-            <img class="img-thumbnail" src="./images/Aechmea.jpg">
-            <img class="img-thumbnail" src="./images/Agave.jpg">
-        </div>
-        <div class="col-md-12">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>Letters</th>
-                        <th>Plant</th>
-                        <th>City</th>
-                        <th>Food</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>A</td>
-                        <td>Aechmea</td>
-                        <td>Anakapalli</td>
-                        <td>Avacodo Salad</td>
-                    </tr>
-                    <tr>
-                        <td>D</td>
-                        <td>Dioon</td>
-                        <td>Delhi</td>
-                        <td>Danish</td>
-                    </tr>
-                    <tr>
-                        <td>D</td>
-                        <td>Duranta</td>
-                        <td>Detorarit</td>
-                        <td>Dates</td>
-                    </tr>
-                    <tr>
-                        <td>A</td>
-                        <td>Achimenes</td>
-                        <td>Ananthapur</td>
-                        <td>Almond rice</td>
-                    </tr>
-                    <tr>
-                        <td>G</td>
-                        <td>Ginger</td>
-                        <td>Guntur</td>
-                        <td>Goli Puri</td>
-                    </tr>
-                    <tr>
-                        <td>A</td>
-                        <td>Agave</td>
-                        <td>Amstradam</td>
-                        <td>Alu Parota</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="col-md">The plant names break first because the letter
+                div
+                are
+                designed
+                using
+                col-sm which gives 576 pixel value so it last same until the
+                screen
+                size become 576. where col-md pixel value is 768 it will break
+                when
+                the screen size is lesst than it.</div>
+            <div class="container">
+                <img src="./images/Achimenes.jpg">
+                <img src="./images/Aechmea.jpg">
+                <img src="./images/Agave.jpg">
+            </div>
 
-        </div>
-        <div class="label">
-            <label>Button and button labels</label>
-        </div>
-        <div class="container col-md-12">
-            <button class="btn btn-primary btn-md"> A </button>
-            <button class="btn btn-primary btn-md"> D </button>
-            <button class="btn btn-primary btn-md"> D </button>
-            <button class="btn btn-primary btn-md"> A </button>
-            <button class="btn btn-primary btn-md"> G </button>
-            <button class="btn btn-primary btn-md"> A </button>
-        </div>
-        <div class="btn-toolbar">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-success btn-md"> A </button>
-                <button class="btn btn-success btn-md"> D </button>
-                <button class="btn btn-success btn-md"> D </button>
+            <div class="container">
+                <img class="img-thumbnail" src="./images/Achimenes.jpg">
+                <img class="img-thumbnail" src="./images/Aechmea.jpg">
+                <img class="img-thumbnail" src="./images/Agave.jpg">
             </div>
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-info btn-md"> A </button>
-                <button class="btn btn-info btn-md"> G </button>
+            <div class="col-md-12">
+                <table class="table table-striped table-bordered">
+                    <caption>Table with Letter, Plant, City and Food</caption>
+                    <thead>
+                        <tr>
+                            <th>Letters</th>
+                            <th>Plant</th>
+                            <th>City</th>
+                            <th>Food</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>A</td>
+                            <td>Aechmea</td>
+                            <td>Anakapalli</td>
+                            <td>Avacodo Salad</td>
+                        </tr>
+                        <tr>
+                            <td>D</td>
+                            <td>Dioon</td>
+                            <td>Delhi</td>
+                            <td>Danish</td>
+                        </tr>
+                        <tr>
+                            <td>D</td>
+                            <td>Duranta</td>
+                            <td>Detorarit</td>
+                            <td>Dates</td>
+                        </tr>
+                        <tr>
+                            <td>A</td>
+                            <td>Achimenes</td>
+                            <td>Ananthapur</td>
+                            <td>Almond rice</td>
+                        </tr>
+                        <tr>
+                            <td>G</td>
+                            <td>Ginger</td>
+                            <td>Guntur</td>
+                            <td>Goli Puri</td>
+                        </tr>
+                        <tr>
+                            <td>A</td>
+                            <td>Agave</td>
+                            <td>Amstradam</td>
+                            <td>Alu Parota</td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </div>
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-danger btn-md"> A </button>
+            <div class="label">
+                <label>Button and button labels</label>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button"
-                id="dropdownMenuButton" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Dropdown button
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="./cat.html">Cat</a>
-                <a class="dropdown-item" href="./dog.html">Dog</a>
+            <div class="container col-md-12">
+                <button class="btn btn-primary btn-md"> A </button>
+                <button class="btn btn-primary btn-md"> D </button>
+                <button class="btn btn-primary btn-md"> D </button>
+                <button class="btn btn-primary btn-md"> A </button>
+                <button class="btn btn-primary btn-md"> G </button>
+                <button class="btn btn-primary btn-md"> A </button>
             </div>
-        </div>
-        <style>
+            <div class="btn-toolbar">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button class="btn btn-success btn-md"> A </button>
+                    <button class="btn btn-success btn-md"> D </button>
+                    <button class="btn btn-success btn-md"> D </button>
+                </div>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button class="btn btn-info btn-md"> A </button>
+                    <button class="btn btn-info btn-md"> G </button>
+                </div>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button class="btn btn-danger btn-md"> A </button>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button"
+                    id="dropdownMenuButton" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Select Page
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="./cat.html">Cat</a>
+                    <a class="dropdown-item" href="./dog.html">Dog</a>
+                </div>
+            </div>
+            <br><hr><br>
+            <div class="col-md-12">
+                <form class="col-md-12">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control"
+                            id="exampleInputEmail1"
+                            aria-describedby="emailHelp"
+                            placeholder="Enter email!">
+                        <small id="emailHelp" class="form-text text-muted">We'll
+                            never
+                            share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPlant1">Plant</label>
+                        <input type="text" class="form-control"
+                            id="exampleInputPlant1"
+                            placeholder="Enter your plant">
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input"
+                            id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Sign
+                            up
+                            for
+                            newsletter?</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="col-md-12">
+                <div class="card-group">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/Achimenes.jpg"
+                            alt="Achimenes">
+                        <div class="card-body">
+                            <h5 class="card-title">Achimenes</h5>
+                            <p class="card-text">Achimenes /æˈkɪmɪniːz/[1] is a
+                                genus of about 25 species of tropical and
+                                subtropical rhizomatous perennial herbs in the
+                                flowering plant family Gesneriaceae. They have a
+                                multitude of common names such as magic flowers,
+                                widow's tears, Cupid's bower, or hot water
+                                plant.</p>
+                            <a
+                                href="https://en.wikipedia.org/wiki/Achimenes"
+                                class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./images/Aechmea.jpg"
+                            alt="Aechmea">
+                        <div class="card-body">
+                            <h5 class="card-title">Aechmea</h5>
+                            <p class="card-text">Aechmea is a genus of flowering
+                                plants in the family Bromeliaceae (subfamily
+                                Bromelioideae). The name comes from the Greek
+                                aichme, meaning "spear". Aechmea comprises eight
+                                subgenera[citation needed] and around 250
+                                species
+                                distributed from Mexico through South America
+                                and
+                                the Caribbean.[1] Most of the species in this
+                                genus
+                                are epiphytes.</p>
+                            <a href="https://en.wikipedia.org/wiki/Aechmea"
+                                class="btn
+                                btn-primary">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./images/Dioon.jpg"
+                            alt="Dioon">
+                        <div class="card-body">
+                            <h5 class="card-title">Dioon</h5>
+                            <p class="card-text">Dioons are dioecious, palmlike
+                                shrubs with cylindrical stems, usually with many
+                                leaves. The species in the genus Dioon are
+                                perennial, evergreen cycads with cylindrical
+                                stem
+                                axis is partially in the ground. The plant is
+                                thickened and made of soft wood, rarely having
+                                above
+                                ground branches. Leaf bases are persistent or
+                                shedding to leave smooth bark. Leaf bases are
+                                persistent or shedding to leave smooth bark. The
+                                leaves are pinnate, spirally arranged,
+                                interspersed
+                                with cataphylls, with leaflets not articulated
+                                and
+                                lacking a midrib. The lower leaflets are often
+                                reduced to spines. The sporophylls are not in
+                                vertical rows in cones, and the megasporophyll
+                                apices are broadly flattened, upturned, and
+                                overlapping.</p>
+                            <a
+                                href="https://en.wikipedia.org/wiki/Dioon"
+                                class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <style>
                 img{
                     width: 300px;
                     height: 400px;
                 }
             </style>
-    </body>
+            </body>
 
-</html>
+        </html>
