--- a/plants.html
+++ b/plants.html
@@ -92,9 +92,9 @@
                 when
                 the screen size is lesst than it.</div>
             <div class="container">
-                <img src="./images/Achimenes.jpg">
-                <img src="./images/Aechmea.jpg">
-                <img src="./images/Agave.jpg">
+                <img class="img-fluid" src="./images/Achimenes.jpg">
+                <img class="img-fluid" src="./images/Aechmea.jpg">
+                <img class="img-fluid" src="./images/Agave.jpg">
             </div>
 
             <div class="container">
